--- a/roles/Deploy/tasks/main.yml
+++ b/roles/Deploy/tasks/main.yml
@@ -11,13 +11,14 @@
   file: path=/var/www/html state=absent
 - 
   file: path=/var/www/html state=directory
-#- 
-#  name: Deploy war Apache2
-#  copy:
-#    src: files/myweb-0.0.4.war
-#    dest: /var/www/html/myweb-0.0.4.war
-#- 
-#  name: unzip war
-#  unarchive:
-#     src: /var/www/html/myweb-0.0.4.war
-#     dest: /var/www/html/
+- 
+  name: Deploy war Apache2
+  copy:
+    src: files/myweb-0.0.4.war
+    dest: /var/www/html/myweb-0.0.4.war
+- 
+  name: unzip war
+  unarchive:
+     src: /var/www/html/myweb-0.0.4.war
+     dest: /var/www/html/
+     remote_src: yes
